--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -14,6 +14,11 @@
   pointer-events: none;
 }
 
+.MTG-Logo {
+  height: 50px;
+  pointer-events: none;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
