--- a/src/App.css
+++ b/src/App.css
@@ -17,3 +17,18 @@
 .App-link {
   color: #61dafb;
 }
+
+footer {
+  background-color: #282c34;
+  min-height: 10vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  color: white;
+}
+
+footer a {
+  color: white;
+}
